<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context=".MedicalDetailsActivityQue1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/btnNextQue1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1"
            android:id="@+id/tvQue1"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvQue_1"
            android:layout_toEndOf="@+id/tvQue_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(1) "
            android:id="@+id/tvQue_1"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_1"
            android:id="@+id/cbQue1_1"
            android:checked="false"
            android:layout_below="@+id/tvQue1"
            android:layout_alignLeft="@+id/tvQue1"
            android:layout_alignStart="@+id/tvQue1"
            android:layout_marginTop="18dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_2"
            android:id="@+id/cbQue1_2"
            android:checked="false"
            android:layout_below="@+id/cbQue1_1"
            android:layout_alignLeft="@+id/cbQue1_1"
            android:layout_alignStart="@+id/cbQue1_1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_3"
            android:id="@+id/cbQue1_3"
            android:checked="false"
            android:layout_below="@+id/cbQue1_2"
            android:layout_alignLeft="@+id/cbQue1_2"
            android:layout_alignStart="@+id/cbQue1_2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_4"
            android:checked="false"
            android:layout_below="@+id/cbQue1_3"
            android:layout_alignLeft="@+id/cbQue1_3"
            android:layout_alignStart="@+id/cbQue1_3"
            android:id="@+id/cbQue1_4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_5"
            android:checked="false"
            android:id="@+id/cbQue1_5"
            android:layout_below="@+id/cbQue1_4"
            android:layout_alignLeft="@+id/cbQue1_4"
            android:layout_alignStart="@+id/cbQue1_4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_6"
            android:checked="false"
            android:id="@+id/cbQue1_6"
            android:layout_below="@+id/cbQue1_5"
            android:layout_alignLeft="@+id/cbQue1_5"
            android:layout_alignStart="@+id/cbQue1_5" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_7"
            android:checked="false"
            android:id="@+id/cbQue1_7"
            android:layout_below="@+id/cbQue1_6"
            android:layout_alignLeft="@+id/cbQue1_6"
            android:layout_alignStart="@+id/cbQue1_6" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_8"
            android:checked="false"
            android:id="@+id/cbQue1_8"
            android:layout_below="@+id/cbQue1_7"
            android:layout_alignLeft="@+id/cbQue1_7"
            android:layout_alignStart="@+id/cbQue1_7" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_9"
            android:checked="false"
            android:id="@+id/cbQue1_9"
            android:layout_below="@+id/cbQue1_8"
            android:layout_alignLeft="@+id/cbQue1_8"
            android:layout_alignStart="@+id/cbQue1_8" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que1_option_10"
            android:checked="false"
            android:id="@+id/cbQue1_10"
            android:layout_below="@+id/cbQue1_9"
            android:layout_alignLeft="@+id/cbQue1_9"
            android:layout_alignStart="@+id/cbQue1_9" />

    </RelativeLayout>
</ScrollView>
