<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context="in.rakhtsavelives.app.MedicalDetailsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/btnNextQue3"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3"
            android:id="@+id/tvQue3"
            android:textSize="15sp"
            android:layout_alignTop="@+id/tvQue_3"
            android:layout_toRightOf="@+id/tvQue_3"
            android:layout_toEndOf="@+id/tvQue_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(3) "
            android:id="@+id/tvQue_3"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_1"
            android:id="@+id/cbQue3_1"
            android:checked="false"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tvQue3"
            android:layout_toRightOf="@+id/tvQue_3"
            android:layout_toEndOf="@+id/tvQue_3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_2"
            android:id="@+id/cbQue3_2"
            android:checked="false"
            android:layout_below="@+id/cbQue3_1"
            android:layout_alignLeft="@+id/cbQue3_1"
            android:layout_alignStart="@+id/cbQue3_1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_3"
            android:id="@+id/cbQue3_3"
            android:checked="false"
            android:layout_below="@+id/cbQue3_2"
            android:layout_alignLeft="@+id/cbQue3_2"
            android:layout_alignStart="@+id/cbQue3_2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_4"
            android:checked="false"
            android:layout_below="@+id/cbQue3_3"
            android:layout_alignLeft="@+id/cbQue3_3"
            android:layout_alignStart="@+id/cbQue3_3"
            android:id="@+id/cbQue3_4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_5"
            android:checked="false"
            android:id="@+id/cbQue3_5"
            android:layout_below="@+id/cbQue3_4"
            android:layout_alignLeft="@+id/cbQue3_4"
            android:layout_alignStart="@+id/cbQue3_4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_6"
            android:checked="false"
            android:id="@+id/cbQue3_6"
            android:layout_below="@+id/cbQue3_5"
            android:layout_alignLeft="@+id/cbQue3_5"
            android:layout_alignStart="@+id/cbQue3_5" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_7"
            android:checked="false"
            android:id="@+id/cbQue3_7"
            android:layout_below="@+id/cbQue3_6"
            android:layout_alignLeft="@+id/cbQue3_6"
            android:layout_alignStart="@+id/cbQue3_6" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_8"
            android:checked="false"
            android:id="@+id/cbQue3_8"
            android:layout_below="@+id/cbQue3_7"
            android:layout_alignLeft="@+id/cbQue3_7"
            android:layout_alignStart="@+id/cbQue3_7" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que3_option_9"
            android:checked="false"
            android:id="@+id/cbQue3_9"
            android:layout_below="@+id/cbQue3_8"
            android:layout_alignLeft="@+id/cbQue3_8"
            android:layout_alignStart="@+id/cbQue3_8" />

    </RelativeLayout>
</ScrollView>
