<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context="in.rakhtsavelives.app.MedicalDetailsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/btnNextQue2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2"
            android:id="@+id/tvQue2"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvQue_2"
            android:layout_toEndOf="@+id/tvQue_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(2) "
            android:id="@+id/tvQue_2"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2_option_1"
            android:id="@+id/cbQue2_1"
            android:checked="false"
            android:layout_below="@+id/tvQue2"
            android:layout_alignLeft="@+id/tvQue2"
            android:layout_alignStart="@+id/tvQue2"
            android:layout_marginTop="19dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2_option_2"
            android:id="@+id/cbQue2_2"
            android:checked="false"
            android:layout_below="@+id/cbQue2_1"
            android:layout_alignLeft="@+id/cbQue2_1"
            android:layout_alignStart="@+id/cbQue2_1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2_option_3"
            android:id="@+id/cbQue2_3"
            android:checked="false"
            android:layout_below="@+id/cbQue2_2"
            android:layout_alignLeft="@+id/cbQue2_2"
            android:layout_alignStart="@+id/cbQue2_2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2_option_4"
            android:checked="false"
            android:layout_below="@+id/cbQue2_3"
            android:layout_alignLeft="@+id/cbQue2_3"
            android:layout_alignStart="@+id/cbQue2_3"
            android:id="@+id/cbQue2_4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2_option_5"
            android:checked="false"
            android:id="@+id/cbQue2_5"
            android:layout_below="@+id/cbQue2_4"
            android:layout_alignLeft="@+id/cbQue2_4"
            android:layout_alignStart="@+id/cbQue2_4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2_option_6"
            android:checked="false"
            android:id="@+id/cbQue2_6"
            android:layout_below="@+id/cbQue2_5"
            android:layout_alignLeft="@+id/cbQue2_5"
            android:layout_alignStart="@+id/cbQue2_5" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_details_que2_option_7"
            android:checked="false"
            android:id="@+id/cbQue2_7"
            android:layout_below="@+id/cbQue2_6"
            android:layout_alignLeft="@+id/cbQue2_6"
            android:layout_alignStart="@+id/cbQue2_6" />

    </RelativeLayout>
</ScrollView>
